<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeFragment">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_pk_luxray"
                        android:layout_width="100sp"
                        android:layout_height="100sp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/perfil_img_luxray"
                        android:src="@drawable/img_pkm_luxray" />

                    <ImageView
                        android:id="@+id/img_pk_umbreon"
                        android:layout_width="100sp"
                        android:layout_height="100sp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/perfil_img_umbreon"
                        android:src="@drawable/img_pkm_umbreon" />

                    <ImageView
                        android:id="@+id/img_pk_arcanine"
                        android:layout_width="100sp"
                        android:layout_height="100sp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/perfil_img_arcanine"
                        android:src="@drawable/img_pkm_arcanine" />

                    <ImageView
                        android:id="@+id/img_pk_banette"
                        android:layout_width="100sp"
                        android:layout_height="100sp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/perfil_img_banette"
                        android:src="@drawable/img_pkm_banette" />

                    <ImageView
                        android:id="@+id/img_pk_buizel"
                        android:layout_width="100sp"
                        android:layout_height="100sp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/perfil_img_buizel"
                        android:src="@drawable/img_pkm_buizel" />

                    <ImageView
                        android:id="@+id/img_pk_wooloo"
                        android:layout_width="100sp"
                        android:layout_height="100sp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/perfil_img_wooloo"
                        android:src="@drawable/img_pkm_wooloo" />

                    <ImageView
                        android:id="@+id/img_pk_regigigas"
                        android:layout_width="100sp"
                        android:layout_height="100sp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/perfil_img_regigigas"
                        android:src="@drawable/img_pkm_regigigas" />

                </LinearLayout>
            </HorizontalScrollView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_adicionar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/perfil_btn_adicionar"
                app:layout_constraintEnd_toStartOf="@+id/btn_menssagem"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_menssagem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/perfil_btn_mensagem"
                app:layout_constraintBottom_toBottomOf="@+id/btn_adicionar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_adicionar"
                app:layout_constraintTop_toTopOf="@+id/btn_adicionar" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img_landscape" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                app:cardCornerRadius="350dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/perfil_img_fotodeperfil"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_profile" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/perfil_txt_trainer"
                android:textSize="@dimen/font_larger"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/profissao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/perfil_txt_profissao"
                android:textSize="@dimen/font_normal"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/aboutme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="@dimen/font_large"
                android:justificationMode="inter_word"
                android:text="Um treinador iniciante procurando por saber mais sobre essas criaturas magicas."
                app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_adicionar" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>